force-app/main/default/objects/echosign_dev1__Agreement_Push_Mapping_Settings__c/echosign_dev1__Agreement_Push_Mapping_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings category related to recipients of an agreement</description>
    <label>Adobe Sign Agreement Recipient Settings</label>
</CustomObject>