force-app/main/default/objects/echosign_dev1__Agreement_Push_Mapping_Settings__c/fields/echosign_dev1__Enable_Participation_Sets__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Enable_Participation_Sets__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable this setting to create/update Participation Sets (Deprecated)</inlineHelpText>
    <label>Deprecated</label>
    <type>Checkbox</type>
</CustomField>