force-app/main/default/objects/echosign_dev1__Agreement_Push_Mapping_Settings__c/fields/echosign_dev1__Recipient_Types__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Recipient_Types__c</fullName>
    <inlineHelpText>Determines the order for searching for a matching Recipient Object. E.g. If the value of this setting is ‘Contact, Lead, User’,  we will first try finding a Contact with the recipient’s email address, then a Lead and then a User.</inlineHelpText>
    <label>Recipient Lookup Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>