force-app/main/default/objects/echosign_dev1__Agreement_Push_Mapping_Settings__c/fields/echosign_dev1__Update_Delegated_Recipients__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Update_Delegated_Recipients__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable this setting to mark the recipients as &apos;Delegated&apos; in case they are delegated by Signer/Sender. These recipients will be hidden from Agreement View Page.</description>
    <inlineHelpText>Enable this setting to mark the recipients as &apos;Delegated&apos; in case they are delegated by Signer/Sender. These recipients will be hidden from Agreement View Page.</inlineHelpText>
    <label>Update Delegated Recipients</label>
    <type>Checkbox</type>
</CustomField>