force-app/main/default/objects/echosign_dev1__Agreement_Push_Mapping_Settings__c/fields/echosign_dev1__Update_Recipients__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Update_Recipients__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable this setting to update existing recipients attributes such as recipient status etc.</description>
    <inlineHelpText>Enable this setting to update existing recipients attributes such as recipient status etc.</inlineHelpText>
    <label>Update Recipients</label>
    <type>Checkbox</type>
</CustomField>