force-app/main/default/objects/echosign_dev1__Agreement_Push_Mapping_Settings__c/fields/echosign_dev1__Update_Replaced_Recipients__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Update_Replaced_Recipients__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable this setting to mark the recipients as &apos;Replaced&apos; in case they are replaced by Sender from Manage Page. These recipients will be hidden from Agreement View Page.</description>
    <inlineHelpText>Enable this setting to mark the recipients as &apos;Replaced&apos; in case they are replaced by Sender from Manage Page. These recipients will be hidden from Agreement View Page.</inlineHelpText>
    <label>Update Replaced Recipients</label>
    <type>Checkbox</type>
</CustomField>